# openmp_microbench

./: CMakeLists.txt
benchmarks/: CMakeLists.txt
benchmarks/NAS_SHOC_OpenACC_2.5/NAS-OMP-OFFLOADING/FT/: Makefile  ft.c
benchmarks/NAS_SHOC_OpenACC_2.5/NAS-OMP-OFFLOADING/MG/: Makefile  mg.c
benchmarks/NAS_SHOC_OpenACC_2.5/NAS-OMP-OFFLOADING/config/: make.def
benchmarks/NAS_SHOC_OpenACC_2.5/NAS-OMP-OFFLOADING/sys/: setparams
benchmarks/NAS_SHOC_OpenACC_2.5/scripts/: singleExperiment.sh
benchmarks/NAS_SHOC_OpenACC_2.5/scripts/conf_files/acc_multicore/: LU.conf
benchmarks/NAS_SHOC_OpenACC_2.5/scripts/conf_files/acc_summitdev/: LU.conf
benchmarks/NAS_SHOC_OpenACC_2.5/scripts/conf_files/omp/: LU.conf
benchmarks/NAS_SHOC_OpenACC_2.5/scripts/conf_files/omp_offloading/: LU.conf
benchmarks/NAS_SHOC_OpenACC_2.5/scripts/conf_files/omp_offloading_mt/: LU.conf
benchmarks/NAS_SHOC_OpenACC_2.5/scripts/conf_files/omp_summitdev/: LU.conf
benchmarks/NAS_SHOC_OpenACC_2.5/scripts/summitdev/: bsub.sh  runSummitdev.sh  run_batch.sh
benchmarks/hello_world/: CMakeLists.txt  main.c
benchmarks/nowait/: compile.sh  main.cpp  run.sh
benchmarks/simple_loop/: CMakeLists.txt  main.c
benchmarks/simple_loop_target_data/: CMakeLists.txt  main.c
benchmarks/target_regions_chain/: CMakeLists.txt  main.c
include/: bench_cupti.h  cupti_cbid.h  get_time.h
